--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: Home
 ---
+<script type="text/javascript" src="{{ site.baseurl }}public/js/bundle.js" defer></script>
 
 <div class="about">
   <h1>
