Rework filters with INITIAL STATE

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: default
 title: Home
 ---
+<script type="text/javascript" src="{{ site.baseurl }}public/available_filters.js" defer></script>
+<script type="text/javascript" src="{{ site.baseurl }}public/posts.js" defer></script>
 <script type="text/javascript" src="{{ site.baseurl }}public/js/bundle.js" defer></script>
 
 <div class="about">
